added lang changes to labs 2

--- a/web/lab2/lab2.html
+++ b/web/lab2/lab2.html
@@ -8,57 +8,54 @@
 </head>
 
 <body>
-    <img src="путь_к_изображению1.jpg" width="100" height="100" align="left" alt="Изображение 1" title="Подсказка 1">
-    <img src="путь_к_изображению2.jpg" width="150" height="150" align="right" alt="Изображение 2" title="Подсказка 2">
 
     <dl>
-        <dt>Термин 1</dt>
-        <dd>Определение 1</dd>
+        <dt>Термін 1</dt>
+        <dd>Визначення 1</dd>
 
-        <dt>Термин 2</dt>
-        <dd>Определение 2</dd>
+        <dt>Термін 2</dt>
+        <dd>Визначення 2</dd>
     </dl>
 
-    <!-- Вставка изображений -->
-    <!-- <img src="путь_к_изображению1.jpg" width="100" height="100" align="left" alt="Изображение 1" title="Подсказка 1">
-    <img src="путь_к_изображению2.jpg" width="150" height="150" align="right" alt="Изображение 2" title="Подсказка 2"> -->
+    <img src="ararat.png" width="100" height="100" align="left" alt="Зображення 1" title="Подказка 1">
 
-    <ul style="list-style-type: square;">
-        <li>Элемент 1</li>
-        <li>Элемент 2</li>
-    </ul>
+    <br>
+    <br>
+    <br>
+    <br>
+    <br>
 
-    <ol type="i" start="15">
-        <li>Элемент 1</li>
-        <li>Элемент 2</li>
-    </ol>
 
-    <ol>
-        <li>Элемент 1
-            <ol>
-                <li>Подэлемент 1</li>
-                <li>Подэлемент 2</li>
-            </ol>
-        </li>
-        <li>Элемент 2</li>
-    </ol>
+    <div>
+        <ul style="list-style-type: square;">
+            <li>Елемент 1</li>
+            <li>Елемент 2</li>
+        </ul>
 
-    <!-- Именованные якоря -->
+        <ol type="i" start="15">
+            <li>Елемент 1</li>
+            <li>Елемент 2</li>
+        </ol>
+
+
+
+        <ol>
+            <li>Елемент 1
+                <ol>
+                    <li>Поділемент 1</li>
+                    <li>Поділемент 2</li>
+                </ol>
+            </li>
+            <li>Елемент 2</li>
+        </ol>
+    </div>
     <a name="image"></a>
-    <!-- Ваш контент для раздела image -->
     <a name="spisok"></a>
-    <!-- Ваш контент для раздела spisok -->
 
-    <!-- Ссылки на именованные якоря -->
-    <a href="#image">Перейти к изображениям</a>
-    <a href="#spisok">Перейти к списку</a>
+    <a href="шлях_до_установочного_файлу.zip" download>Завантажити Денвер</a>
 
-    <!-- Ссылка на загрузку Денвера -->
-    <a href="путь_к_установочному_файлу.zip" download>Скачать Денвер</a>
-
-    <!-- Изображение-ссылка на Google -->
     <a href="https://www.google.com" target="_blank">
-        <img src="путь_к_изображению_google.jpg" alt="Google" title="Поиск в Google">
+        <img src="google.png" alt="Google" title="Пошук у Google">
     </a>
 
 </body>
