--- a/web/lab2/lab2_2.html
+++ b/web/lab2/lab2_2.html
@@ -1,4 +1,3 @@
-<!-- my.html -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -9,22 +8,17 @@
 </head>
 
 <body>
-    <!-- Нумерованный список языков программирования -->
     <ol>
         <li>JavaScript</li>
         <li>Python</li>
-        <!-- Добавьте другие языки программирования -->
     </ol>
 
-    <!-- Маркированный список цветовых палитр -->
     <ul>
         <li>RGB</li>
         <li>CMYK</li>
-        <!-- Добавьте другие цветовые палитры -->
     </ul>
 
-    <!-- index.html -->
-    <a href="путь_к_файлу_my.html">Мой файл</a>
+    <a href="index_lab2_1.html">Мій файл</a>
 
 </body>
 
