--- a/web/lab1/lab1.html
+++ b/web/lab1/lab1.html
@@ -2,16 +2,16 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Заголвоок окна</title>
+     <meta charset="UTF-8">
+     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+     <title>Заголовок вікна</title>
 </head>
 
 <body text="red" bgcolor="blue" background="background_003.jpg">
-    Осваиваем web-технологии
-    <p><strong>Это жирный текст</strong></p>
-    <p><em>Это курсив</em></p>
-    <p><u>Это подчеркнутый текст</u></p>
+     Освоюємо web-технології
+     <p><strong>Це жирний текст</strong></p>
+     <p><em>Це курсив</em></p>
+     <p><u>Це підкреслений текст</u></p>
 
 </body>
 
