--- a/web/lab1/lab1_1.html
+++ b/web/lab1/lab1_1.html
@@ -8,38 +8,38 @@
 </head>
 
 <body style="background-color: rgba(119, 28, 205, 0.252); color: black;">
-  <p>Текст, поддаваемый разбиению на абзацы.</p>
-  <blockquote>Это цитата.</blockquote>
-  <pre><code>// Пример программного кода
-    function example() {
-      console.log("Hello, World!");
-    }
-  </code></pre>
-  <p>Первый абзац</p>
-  <p>Второй абзац</p>
-  <p align="justify">Текст с выравниванием</p>
-  <p><strong>Жирный текст</strong></p>
-  <p><u>Подчеркнутый текст</u></p>
-  <p><em>Курсивный текст</em></p>
-  <p>Это нормальный текст</p>
-  <p>Это текст с верхним индексом: x<sup>2</sup></p>
-  <blockquote>Это цитата</blockquote>
-  <pre><code>// Пример кода
-  function example() {
-    console.log("Hello, World!");
-  }
+  <p>Текст, що піддається розбиттю на абзаци.</p>
+  <blockquote>Це цитата.</blockquote>
+  <pre><code>// Приклад програмного коду
+     function example() {
+       console.log("Hello, World!");
+     }
+   </code></pre>
+  <p>Перший абзац</p>
+  <p>Другий абзац</p>
+  <p align="justify">Текст із вирівнюванням</p>
+  <p><strong>Жирний текст</strong></p>
+  <p><u>Підкреслений текст</u></p>
+  <p><em>Курсивний текст</em></p>
+  <p>Це нормальний текст</p>
+  <p>Це текст із верхнім індексом: x<sup>2</sup></p>
+  <blockquote>Це цитата</blockquote>
+  <pre><code>// Приклад коду
+   function example() {
+     console.log("Hello, World!");
+   }
 </code></pre>
 
   <font color="green">Google</font>
   <font color="blue">Bing</font>
   <font color="red">Yahoo</font>
 
-  <!-- Пример добавления линий -->
+  <!-- Приклад додавання ліній -->
   <hr style="width: 400px; height: 5px;">
   <hr style="width: 50%;">
   <hr style="width: 50%;">
 
-  <!-- Пример выделения заголовков -->
+  <!-- Приклад виділення заголовків -->
   <h1>Заголовок 1</h1>
   <h2>Заголовок 2</h2>
   <h3>Заголовок 3</h3>
@@ -47,8 +47,8 @@
   <h5>Заголовок 5</h5>
   <h6>Заголовок 6</h6>
 
-  <!-- Пример отображения знака меньше -->
-  <p>Математическое выражение: 5 &lt; 10</p>
+  <!-- Приклад відображення знака менший -->
+  <p>Математичний вираз: 5 &lt; 10</p>
 
 </body>
 
