--- a/web/lab4/content.html
+++ b/web/lab4/content.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-    <h1>Добро пожаловать!</h1>
-    <p>Выберите лабораторную работу в меню слева.</p>
+    <h1>Ласкаво просимо!</h1>
+    <p>Виберіть лабораторну роботу в меню зліва.</p>
 </body>
 
 </html>
