--- a/web/lab4/menu.html
+++ b/web/lab4/menu.html
@@ -9,15 +9,14 @@
 
 <body>
     <ul>
-        <li><a href="lab3.htm" target="content">Лабораторная работа 1</a></li>
-        <li><a href="lab4.htm" target="content">Лабораторная работа 2</a></li>
-        <li><a href="lab3.htm" target="content">Лабораторная работа 3</a></li>
-        <li><a href="lab4.htm" target="content">Лабораторная работа 4</a></li>
-        <li><a href="lab3.htm" target="content">Лабораторная работа 5</a></li>
-        <li><a href="lab4.htm" target="content">Лабораторная работа 6</a></li>
-        <li><a href="lab3.htm" target="content">Лабораторная работа 7</a></li>
-        <li><a href="lab4.htm" target="content">Лабораторная работа 8</a></li>
-        <!-- Добавьте ссылки на остальные лабораторные работы -->
+        <li><a href="lab3.htm" target="content">Лабораторна робота 1</a></li>
+        <li><a href="lab4.htm" target="content">Лабораторна робота 2</a></li>
+        <li><a href="lab3.htm" target="content">Лабораторна робота 3</a></li>
+        <li><a href="lab4.htm" target="content">Лабораторна робота 4</a></li>
+        <li><a href="lab3.htm" target="content">Лабораторна робота 5</a></li>
+        <li><a href="lab4.htm" target="content">Лабораторна робота 6</a></li>
+        <li><a href="lab3.htm" target="content">Лабораторна робота 7</a></li>
+        <li><a href="lab4.htm" target="content">Лабораторна робота 8</a></li>
     </ul>
 </body>
 
