--- a/web/lab7/index.html
+++ b/web/lab7/index.html
@@ -5,11 +5,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>HTML and CSS Assignment</title>
+    <title>HTML і CSS Assignment</title>
 </head>
 
 <body>
-    <!-- Задание 1 -->
+    <!-- Завдання 1 -->
     <table class="frmtbl">
         <thead>
             <tr>
@@ -19,43 +19,43 @@
         </thead>
         <tbody>
             <tr>
-                <td>Ячейка 1</td>
-                <td>Ячейка 2</td>
+                <td>Комірка 1</td>
+                <td>Комірка 2</td>
             </tr>
             <tr>
-                <td>Ячейка 3</td>
-                <td>Ячейка 4</td>
+                <td>Комірка 3</td>
+                <td>Комірка 4</td>
             </tr>
         </tbody>
         <tfoot>
             <tr>
-                <td>Нижний ряд 1</td>
-                <td>Нижний ряд 2</td>
+                <td>Нижній ряд 1</td>
+                <td>Нижній ряд 2</td>
             </tr>
         </tfoot>
     </table>
 
-    <!-- Задание 6 -->
+    <!-- Завдання 6 -->
     <div class="marked-list">
         <ul>
-            <li>Элемент 1</li>
-            <li>Элемент 2</li>
-            <li>Элемент 3</li>
+            <li>Елемент 1</li>
+            <li>Елемент 2</li>
+            <li>Елемент 3</li>
         </ul>
     </div>
 
-    <!-- Задание 8 -->
+    <!-- Завдання 8 -->
     <br>
-    <div id="layer">Текст внутри блока с идентификатором "layer"</div>
+    <div id="layer">Текст усередині блоку з ідентифікатором "layer"</div>
 
-    <!-- Задание 9 -->
+    <!-- Завдання 9 -->
     <div class="image-container">
         <img src="background_003.jpg" alt="Large Image">
     </div>
 
-    <!-- Задание 10 -->
+    <!-- Завдання 10 -->
     <div class="scrollbar-styling">
-        <p>Содержимое блока с полосами прокрутки.</p>
+        <p>Вміст блоку зі смугами прокручування.</p>
     </div>
 </body>
 
