--- a/web/lab4/index.html
+++ b/web/lab4/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Фреймы и Карты изображений</title>
+    <title>Фрейми та Карти зображень</title>
 </head>
 <frameset cols="20%, 80%" frameborder="noresize">
     <frame src="menu.html" name="menu">
