--- a/web/lab4/content.html
+++ b/web/lab4/content.html
@@ -8,8 +8,7 @@
 </head>
 
 <body>
-    <h1>Ласкаво просимо!</h1>
-    <p>Виберіть лабораторну роботу в меню зліва.</p>
+    <a href="https://www.gosearchresults.com/">SEARCH</a>
 </body>
 
 </html>
