--- a/web/lab4/frame.html
+++ b/web/lab4/frame.html
@@ -6,9 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Frame Example</title>
 </head>
-<frameset cols="20%, 80%" frameborder="noresize">
-    <frame src="menu.html" name="menu">
-        <frame src="content.html" name="content">
+<frameset cols="50%" frameborder="noresize">
+    <frame src="content.html" name="content">
 </frameset>
 
 </html>
