--- a/web/lab4/index.html
+++ b/web/lab4/index.html
@@ -11,7 +11,7 @@
     <frame src="menu.html" name="menu">
         <frameset rows="100, *">
             <frame src="frame.html" name="frame ">
-                <frame src="content.html" name="content">
+                <frame src="map.html" name="content">
         </frameset>
 </frameset>
 
