--- a/web/lab6/traffic-light.html
+++ b/web/lab6/traffic-light.html
@@ -9,9 +9,9 @@
 </head>
 
 <body>
-    <div class="light red"></div>
-    <div class="light yellow"></div>
-    <div class="light green"></div>
+    <div class="red"></div>
+    <div class=" yellow"></div>
+    <div class=" green"></div>
 </body>
 
 </html>
