--- a/web/lab2/lab2.html
+++ b/web/lab2/lab2.html
@@ -52,7 +52,7 @@
     <a name="image"></a>
     <a name="spisok"></a>
 
-    <a href="шлях_до_установочного_файлу.zip" download>Завантажити Денвер</a>
+    <a href="шлях_до_установочного_файлу" download>Завантажити Денвер</a>
 
     <a href="https://www.google.com" target="_blank">
         <img src="google.png" alt="Google" title="Пошук у Google">
