--- a/web/lab3/lab3.html
+++ b/web/lab3/lab3.html
@@ -64,7 +64,7 @@
 
     <table border="1" cellpadding="0" cellspacing="0" width="100%">
         <tr>
-            <td width="200" height="150" background="your_image_url.jpg">&nbsp;</td>
+            <td width="200" height="150" background="image_url.jpg">&nbsp;</td>
             <td bgcolor="#123456" align="right" valign="top" style="color: #ffffff;">Прізвище</td>
         </tr>
         <tr>
