--- a/web2/lab1/index.html
+++ b/web2/lab1/index.html
@@ -4,36 +4,37 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Мой блог</title>
+    <title>Мій блог</title>
     <link rel="stylesheet" href="css/main.css">
 </head>
 
 <body>
     <header>
-        <h1>Добро пожаловать!</h1>
+        <h1>Ласкаво просимо!</h1>
     </header>
     <main>
         <section>
-            <a href="">Математические вычисления</a>
-            <!-- Форма для ввода данных -->
+            <h2><a href="">Математичні обчислення</a></h2>
+            <!-- Форма для введення даних -->
             <form id="calcForm">
-                <label for="expression">Введите выражение:</label>
+                <label for="expression">Введіть вираз:</label>
                 <input type="text" id="expression" name="expression" required>
-                <button type="submit">Вычислить</button>
+                <button type="submit">Обчислити</button>
                 <div id="result"></div>
             </form>
         </section>
         <section>
-            <h2>Галерея изображений</h2>
-            <!-- Здесь будет ваша галерея -->
+            <h2><a href="Галерея зображень">Галерея зображень</a></h2>
+            <!-- Тут буде ваша галерея -->
         </section>
         <section>
-            <h2>Форма и база данных</h2>
-            <!-- Форма для работы с базой данных -->
+            <h2><a href="Галерея зображень">Форма та база даних</a></h2>
+
+            <!-- Форма для роботи з базою даних -->
         </section>
     </main>
     <footer>
-        <!-- Здесь будет подвал -->
+        <!-- Тут буде підвал -->
     </footer>
     <script src="js/script.js"></script>
 </body>
