--- a/web2/lab2/index.html
+++ b/web2/lab2/index.html
@@ -4,26 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Математические вычисления</title>
+    <title>Математичні обчислення</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
     <header>
-        <h1>Математические вычисления</h1>
+        <h1>Математичні обчислення</h1>
     </header>
     <main>
-        <!-- Форма для ввода данных -->
+        <!-- Форма для введення даних -->
         <form id="calcForm">
-            <label for="start">Начальное значение:</label>
+            <label for="start">Початкове значення:</label>
             <input type="number" id="start" name="start" required>
-            <label for="end">Конечное значение:</label>
+            <label for="end">Концеве значення:</label>
             <input type="number" id="end" name="end" required>
-            <label for="step">Шаг:</label>
+            <label for="step">Крок:</label>
             <input type="number" id="step" name="step" required>
-            <button type="submit">Рассчитать</button>
+            <button type="submit">Розрахувати</button>
         </form>
-        <!-- Результаты вычислений -->
+        <!-- Результати обчислень -->
         <div id="results"></div>
     </main>
     <footer>
